<resources>
    <string name="app_name">Blush</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_monumental_habits">WELCOME TO Monumental habits</string>
    <string name="we_can_help_you_to_be_a_better_version_of_yourself">We can help you to be a better version of yourself.</string>
    <string name="we_can">we can</string>
    <string name="help_you">help you</string>
    <string name="to_be_a_better">to be a better</string>
    <string name="version_of">version of</string>
    <string name="yourself">yourself</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="create_new_habit_easily">CREATE NEW HABIT EASILY</string>
    <string name="keep_track_of_your_progress">KEEP TRACK OF YOUR PROGRESS</string>
    <string name="get_stated">Get Stated</string>
    <string name="join_a_supportive_community">JOIN A SUPPORTIVE COMMUNITY</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="log_in_with_email">Log in with email</string>
    <string name="email">Email</string>
    <string name="show">Show</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_your_account">Create your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="email_me_about_special_pricing_and_more">Email me about special pricing and more</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_registered_email_below_to_receive">Enter your registered email below to receive</string>
    <string name="password_reset_instruction">password reset instruction</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="remember_password">Remember password?</string>
</resources>