<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_peach"
    tools:context=".presentation.register.forgot_password.ForgotPasswordFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ibGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_margin="20dp"
        android:src="@drawable/ic_back_arrow"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textColor="@color/purple_brown"
        android:textStyle="bold"
        android:text="@string/forgot_your_password"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/im_forgot_pass"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="20dp"
        android:background="@drawable/button_white_shape"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/enter_your_registered_email_below_to_receive"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:text="@string/password_reset_instruction"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:lines="1"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/field_light_orange_shape"
            android:hint="@string/email"
            android:paddingStart="20dp"
            android:textColor="@color/orange"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/acpStart"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_gold_shape"
            android:text="@string/send_reset_link"
            android:textAllCaps="false"
            android:textColor="@color/purple_brown"
            android:textSize="18sp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:text="@string/login"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>