<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_peach"
    tools:context=".presentation.register.sign_up.SignUpFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/im_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/create_your_account"
        android:textColor="@color/purple_brown"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_white_shape"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:lines="1"
        android:paddingStart="20dp"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_white_shape"
        android:drawableStart="@drawable/ic_active_email"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:lines="1"
        android:paddingStart="20dp"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_white_shape"
        android:drawableStart="@drawable/ic_active_lock"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:lines="1"
        android:paddingStart="20dp"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton3"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@color/transparent"
        android:text="@string/show"
        android:textAllCaps="false"
        android:textColor="@color/purple_brown"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintTop_toTopOf="@+id/etPassword"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/cbStaySign"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:buttonTint="@color/orange"
        android:text="@string/keep_me_signed_in"
        android:textColor="@color/purple_brown"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:buttonTint="@color/orange"
        android:text="@string/email_me_about_special_pricing_and_more"
        android:textColor="@color/purple_brown"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/cbStaySign"
        app:layout_constraintTop_toBottomOf="@+id/cbStaySign" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acpStart"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_gold_shape"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/purple_brown"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/or_sign_in_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acpStart" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acpGoogle"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_white_shape"
        android:drawableStart="@drawable/ic_google"
        android:paddingStart="5dp"
        android:text="@string/google"
        android:textAlignment="center"
        android:textColor="@color/purple_brown"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintWidth_percent="0.35"
        tools:ignore="RtlSymmetry,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acpFacebook"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_white_shape"
        android:drawableStart="@drawable/ic_facebook"
        android:paddingStart="-10dp"
        android:text="@string/facebook"
        android:textAlignment="center"
        android:textColor="@color/purple_brown"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintWidth_percent="0.35"
        tools:ignore="RtlSymmetry,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="-40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textColor="@color/purple_brown"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView4"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView4" />

</androidx.constraintlayout.widget.ConstraintLayout>