<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.introductions.IntroOneFragment"
    android:background="@color/white"
    android:gravity="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/join_a_supportive_community"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/purple_brown"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="290dp"
        android:layout_height="405dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/im_intro_four" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/we_can"
        android:textAllCaps="true"
        android:textColor="@color/purple_brown"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/help_you"
        android:textAllCaps="true"
        android:textColor="@color/gold"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_be_a_better"
        android:textAllCaps="true"
        android:textColor="@color/purple_brown"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView2"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView2"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/version_of"
        android:textAllCaps="true"
        android:textColor="@color/purple_brown"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/yourself"
        android:textAllCaps="true"
        android:textColor="@color/gold"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView3"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView3"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView3" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acpStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_gold_shape"
        android:text="@string/get_stated"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/purple_brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>